# Drohne

./: Teile.xlsx  Webseiten-abschreiben.xlsx
3D Pläne/: Drohne komplett.x_t
Basis/.metadata/: version.ini
Basis/BasePi/: .classpath  .project
Basis/BasisArduinoSerial/: BasisArduinoSerial.ino
Basis/Blumenerkennung/: erkennung.py
Basis/Excluded/: .project
Basis/GUI/: .classpath
Basis/Kommunikation/: .project
Basis/Steuerung/: Steuerung.sln
Basis/Steuerung_py/: _launcher.py  bildclient.py  client.py  empfangen.xbm  gui.py  sensorclient.py  sensorfenster.py
Basis/WlanBasis/: .classpath  .project
Basis/XBoxInput/: XBoxInput.sln
Baupläne/: Software.mm
Baupläne/3D Pläne/: 3-Flügel.scode  4Fluegel.scode  DrucksensorMain.stl  DrucksensorMainTxt.stl  DrucksensorPlatte.stl  DrucksensorPlatteTxt.stl  Flügel.x_t  Grundplatte+Flügel.scode  Grundplatte.x_t  GrundplatteFluegelneu.scode
Dokumentation/: Artikel.docx  Bilder Link.txt  Schritte.xlsx  Spenden.xlsx  Zeitplan Grob.docx
Dokumentation/Analyse/: AH3_Holding.xlsx  Pressure.xlsx
Dokumentation/Bestellungen/: Übersicht.xlsx
Dokumentation/Bilder/: Optimierugen.txt
Dokumentation/Externe Projekte/: To Do.docx
Drohne/: Drohnenprogramme Zeitaufwand.xlsx  Eigenschaften Drohne.docx  Konfiguration_Raspi.xlsx
Drohne/ArduinoScripts/: Barometer.ino  Gyroscope.ino
Drohne/Blumentracker/: .classpath  .project
Drohne/picamdemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  com_koehlert_camera_Camera.cpp  com_koehlert_camera_Camera.h  picam.cpp  picamdemo  test.cpp  testdemo
(+382 files in other folders)
