cmake_minimum_required(VERSION 2.8)
project( piCamera )
SET(COMPILE_DEFINITIONS -Werror)
#find_package( OpenCV REQUIRED )
include_directories(/opt/vc/include)
include_directories(/opt/vc/userland-master/interface/vcos)
include_directories(/opt/vc/userland-master)
include_directories(/opt/vc/userland-master/interface/vcos/pthreads)
include_directories(/opt/vc/userland-master/interface/vmcs_host/linux)
include_directories(/opt/vc/userland-master/host_applications/linux/libs/bcm_host/include)
link_directories(/opt/vc/lib)
include_directories(/usr/java/jdk1.8.0_161/include/linux)
include_directories(/usr/java/jdk1.8.0_161/include)

#add_executable(picamdemo picam.cpp com_koehlert_camera_Camera.cpp camera.cpp cameracontrol.cpp graphics.cpp)
#add_executable(testdemo test.cpp camera.cpp cameracontrol.cpp graphics.cpp)
add_library(piCamera SHARED picam.cpp com_koehlert_camera_Camera.cpp camera.cpp cameracontrol.cpp graphics.cpp)

target_link_libraries(piCamera libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so GLESv2 EGL ${OpenCV_LIBS})
